Changelog
=========

This document describes changes between each past release. For information
about future releases, check `milestones`_ and :doc:`/about/vision`.

2.0rc1 (unreleased)
-----------------

- Added the possibility to do multi tenancy with request (#27)


1.11 (unreleased)
-----------------

- Enable the test suite to be executed locally by cleaning created temp directories (#29)


1.10 (2016-04-20)
-----------------

- Ensure GitCommandError compat.
- Ensure git repository (require GitPython > 1.0.0).


1.9 (2016-03-17)
----------------

- Dropped Django 1.7 support (#22)


1.8 (2015-11-24)
----------------

- Tested with Django 1.8. Needs django-compressor >= 1.5.
- Tested with Python 3.4


1.7 (2015-06-18)
----------------

- Nothing changed yet.


1.7 (2015-06-18)
----------------

- Add a url generator template tag for use in custom html tags


1.6.2 (2015-04-09)
------------------

- Django 1.7 compatible version


1.6 (2015-04-01)
----------------

- Custom Compressor filter for smarter asset linking (#12)


1.5 (2014-11-19)
----------------

- Freeze the requirements about Django


1.4 (2014-07-03)
----------------

- Adds update_themefolder_from_git django command.
- Checks we have lookup before trying to load corresponding templates.
- Does not fail if no lookup but return # if expect an url like string or None
  if check if a corresponding resource exists.
- Adds templatetags tests.


1.3 (2014-06-12)
----------------

- added the PIMPTHEME_FOLDER to let user chose the directory where to
  store custom
- do not user STATIC_URL anymore


1.2 (2014-06-12)
----------------

- Bugfixes on managements command


1.1 (2014-06-12)
----------------

- added the templatetag system


1.0 (2014-06-12)
----------------

- Nothing changed yet.


1.0 (2014-06-12)
----------------

Initial release.

- Nothing changed yet.