@@ -11,7 +11,9 @@ project_name = settings.SETTINGS_MODULE.split(".")[0]
 def pimp(context, file_type, filename=None):
     if filename is None:
         filename = ""
-    lookup = get_lookup_class().objects.get_current()
+    lookup = get_lookup_class().objects.get_current(
+        context=context
+    )
 
     # lookup is not mandatory, maybe we do not have current item right now.
     if not lookup:
@@ -75,7 +77,7 @@ def pimp_exists(context, filetype, filename=None):
     # in order to determine which is the current_site.
     # Multi-tenancy related #27
     lookup = get_lookup_class().objects.get_current(
-        getattr(context, 'request', None),
+        context=context
     )
 
     # lookup is not mandatory, maybe we do not have current item right now.
