@@ -7,7 +7,8 @@ about future releases, check `milestones`_ and :doc:`/about/vision`.
 2.0rc1 (unreleased)
 -----------------
 
-- Added the possibility to do multi tenancy with request (#27)
+- !Warning! We are adding a parameter to .get_current() method on the
+  lookup_class. Added the possibility to do multi tenancy with request (#27)
 
 
 1.11 (unreleased)
